examples/test/testpolicy13742.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13742
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key47: value25
      key33: value13
      key24: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value23
          key41: value34
      podSelector:
        matchLabels:
          key32: value43
          key41: value28
